Expose device types to API
